--- a/170516/Views/Administrator/AddUser.cshtml
+++ b/170516/Views/Administrator/AddUser.cshtml
@@ -5,18 +5,15 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="content-box-large">
-            <div class="panel-heading">
-                @*nav bar*@
-                <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewUser","Administrator")">Quản Lý Người dùng</a></li>
-                    <li class="active">Thêm Người dùng</li>
-                </ol>
-                <div class="panel-title title-3">Thêm Người dùng</div>
-            </div>
-            <div class="panel-body">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="page-title">Thêm tài khoản mới</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box table-responsive">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addUserForm" }))
                 {
                     <div class="form-horizontal">
@@ -74,7 +71,7 @@
                                 <div class="form-group">
                                     <label class="control-label">Ảnh Người dùng</label>
                                     <!-- IMAGE -->
-                                    <div class="image-box">                                       
+                                    <div class="image-upload-box">
                                         <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
 
                                         <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
