--- a/170516/Views/Administrator/UpdateUser.cshtml
+++ b/170516/Views/Administrator/UpdateUser.cshtml
@@ -1,26 +1,22 @@
 ﻿@model _170516.Models.Administrator.UpdateUserModel
 
 @{
-    ViewBag.Title = "Cập nhật thông tin nhân viên";
+    ViewBag.Title = "Cập nhật tài khoản";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<div class="row">
-    <div class="col-md-12">
-        <div class="main-content-wrapper">
-            <div class="panel-heading">
-                @*nav bar*@
-                <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewUser","Administrator")">Quản lý nhân viên</a></li>
-                    <li class="active">Cập nhật thông tin nhân viên</li>
-                </ol>
-                <div class="container-fluid admin-header">
-                    <div class="title col-md-6 col-xs-6"><h3>Cập Nhật Thông Tin Nhân Viên</h3></div>
-                </div>
-            </div>
-            <div class="container-fluid">
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="page-title">Cập nhật tài khoản @Model.LastName @Model.FirstName</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box table-responsive">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "updateUserForm" }))
                 {
-                   
+
                     <div class="form-horizontal">
                         <div class="row">
                             @Html.ValidationSummary(true)
@@ -83,7 +79,7 @@
                                 <div class="form-group">
                                     <label class="control-label">Ảnh Người dùng</label>
                                     <!-- IMAGE -->
-                                    <div class="image-box">
+                                    <div class="image-upload-box">
                                         @if (string.IsNullOrEmpty(Model.UserImage))
                                         {
                                             <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
