--- a/170516/Views/Account/Login.cshtml
+++ b/170516/Views/Account/Login.cshtml
@@ -46,7 +46,7 @@
         </div>
         <!-- .subfooter start -->
         <!-- ================ -->
-        <p class="mt-20">Copyright © 2015 The Project by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>. All Rights Reserved</p>
+        <p class="mt-20">Copyright © 2015 The Project by <a target="_blank" href="#">...</a>. All Rights Reserved</p>
         <!-- .subfooter end -->
     </div>
 </div>
