--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -57,41 +57,7 @@
                                         <button type="button" class="btn dropdown-toggle btn-default btn-sm" data-toggle="dropdown"><i class="fa fa-shopping-cart pr-10"></i> Giỏ Hàng</button>
                                         <ul class="dropdown-menu dropdown-menu-right dropdown-animation" style="z-index: 9000;">
                                             <li>
-                                                <!-- put the cart in here -->
-                                                <table class="table table-hover">
-                                                    <thead>
-                                                        <tr>
-                                                            <th class="quantity">QTY</th>
-                                                            <th class="product">Product</th>
-                                                            <th class="amount">Subtotal</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <td class="quantity">2 x</td>
-                                                            <td class="product"><a href="shop-product.html">Android 4.4 Smartphone</a><span class="small">4.7" Dual Core 1GB</span></td>
-                                                            <td class="amount">$199.00</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td class="quantity">3 x</td>
-                                                            <td class="product"><a href="shop-product.html">Android 4.2 Tablet</a><span class="small">7.3" Quad Core 2GB</span></td>
-                                                            <td class="amount">$299.00</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td class="quantity">3 x</td>
-                                                            <td class="product"><a href="shop-product.html">Desktop PC</a><span class="small">Quad Core 3.2MHz, 8GB RAM, 1TB Hard Disk</span></td>
-                                                            <td class="amount">$1499.00</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td class="total-quantity" colspan="2">Total 8 Items</td>
-                                                            <td class="total-amount">$1997.00</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                                <div class="panel-body text-right">
-                                                    <a href="shop-cart.html" class="btn btn-group btn-gray btn-sm">View Cart</a>
-                                                    <a href="shop-checkout.html" class="btn btn-group btn-gray btn-sm">Checkout</a>
-                                                </div>
+                                                @{Html.RenderAction("ViewCartMinimal", "Product");}
                                             </li>
                                         </ul>
                                     </div>
@@ -164,7 +130,7 @@
                     <div class="subfooter-inner">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="text-center">Copyright © 2016 The Project by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>. All Rights Reserved</p>
+                                <p class="text-center">Copyright © 2016 The Project by <a target="_blank" href="#">...</a>. All Rights Reserved</p>
                             </div>
                         </div>
                     </div>
