DoanhHN - emailTem update1

--- a/170516/Content/admin.common.css
+++ b/170516/Content/admin.common.css
@@ -2368,3 +2368,7 @@ pre {
     .image-upload-box .image-file-input {
         display: none;
     }
+
+    .merge-item {
+    cursor: pointer;
+    }
