--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -217,7 +217,8 @@
             changeUserStatus: "@Url.Action("ChangeUserStatus", "Administrator")",
             answerRequest: "@Url.Action("AnswerRequest","Administrator")",
 
-            addEmailTemplate: "@Url.Action("AddEmailTemplate","Administrator")"
+            addEmailTemplate: "@Url.Action("AddEmailTemplate","Administrator")",
+            getEmailTemplateById: "@Url.Action("GetEmailTemplateContent", "Administrator")"
         };
 
         var sampleRegex = {
