DoanhHN - update reply email

--- a/170516/Views/Administrator/ViewRequestDetail.cshtml
+++ b/170516/Views/Administrator/ViewRequestDetail.cshtml
@@ -124,9 +124,24 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label">Tiêu đề <span class="text-danger">*</span></label>
+                                <div class="col-sm-7">
+                                    <input type="text" class="form-control" id="ReplySubject" name="ReplySubject" style="width:100%;" />
+                                    <span class="input-error-box text-danger" id="ReplySubjectValidation"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
                             <!-- DESCRIPTION -->
                             <div class="form-group col-sm-12 add-product-description" style="margin-left:2px;">
-                                <textarea class="tiny_mce_input form-control" type="file" id="ReplyContent" name="ReplyContent" style=" width 100%;"></textarea>
+                                <textarea class="tiny_mce_input form-control" type="file" id="ReplyContent" name="ReplyContent" style=" width:100%;"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">                            
+                            <div class="col-sm-7">
+                                <span class="input-error-box text-danger" id="ReplyContentValidation"></span>
                             </div>
                         </div>
                         <div class="row">
