DoanhHN - update email Template 2

--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -60,6 +60,9 @@
                                 <a href="@Url.Action("ViewRequest","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Feedback Khách Hàng </span> </a>
                             </li>
                             <li class="has_sub">
+                                <a href="@Url.Action("ViewEmailTemplate","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Mẫu email </span> </a>
+                            </li>
+                            <li class="has_sub">
                                 <a href="@Url.Action("ViewSystemVariable","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Thông Tin Hệ Thống </span> </a>
                             </li>
                             <li class="has_sub">
@@ -217,7 +220,9 @@
             changeUserStatus: "@Url.Action("ChangeUserStatus", "Administrator")",
             answerRequest: "@Url.Action("AnswerRequest","Administrator")",
 
+            viewEmailTemplate:  "@Url.Action("ViewEmailTemplate","Administrator")",
             addEmailTemplate: "@Url.Action("AddEmailTemplate","Administrator")",
+            updateEmailTemplate: "@Url.Action("UpdateEmailTemplate","Administrator")",
             getEmailTemplateById: "@Url.Action("GetEmailTemplateContent", "Administrator")"
         };
 
