--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -60,7 +60,7 @@
                                 <a href="@Url.Action("ViewRequest","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Feedback Khách Hàng </span> </a>
                             </li>
                             <li class="has_sub">
-                                <a href="@Url.Action("ViewEmailTemplate","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Mẫu email </span> </a>
+                                <a href="@Url.Action("ViewEmailTemplate","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Mẫu Email </span> </a>
                             </li>
                             <li class="has_sub">
                                 <a href="@Url.Action("ViewSystemVariable","Administrator")" class="waves-effect subdrop"><i class="zmdi zmdi-view-dashboard"></i> <span> Thông Tin Hệ Thống </span> </a>
