--- a/170516/Views/Administrator/AddEmailTemplate.cshtml
+++ b/170516/Views/Administrator/AddEmailTemplate.cshtml
@@ -45,37 +45,15 @@
                                             <label class="label label-success merge-item">@item</label>
                                         }
                                     </div>
-                                </div>
-                                @Html.CheckBoxFor(model => model.IsHTML, new { hidden = "hidden" })
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">Định dạng <span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        <select class="form-control" onchange="emailTemplateSupport.ChangeHtmlToText(this)" id="ddlEmailFormat">
-                                            <option selected>HTML</option>
-                                            <option>Plain Text</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                
-                                
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">Sử dụng <span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        @Html.CheckBoxFor(model => model.IsEnable, new { @class = "form-control" })
-                                    </div>
-                                </div>
+                                </div>                                
                                
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="">Nội dung<span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        <div id="emailTemplate-area-html" @(!Model.IsHTML ? "hidden='hidden'" : "")>
+                                        <div id="emailTemplate-area-html">
                                             @Html.TextAreaFor(model => model.HtmlTextContent, new { @class = "tiny_mce_input form-control", @id = "txtA_htmlVersion", @style = "height:250px", maxlength = 5000 })
                                             @Html.ValidationMessageFor(model => model.HtmlTextContent)
-                                        </div>
-                                        <div id="emailTemplate-area-text" @(Model.IsHTML ? "hidden='hidden'" : "")>
-                                            @Html.TextAreaFor(model => model.PlainTextContent, new { @id = "txtA_textVersion", @style = "min-height:250px; min-width:auto", @class = "form-control", maxlength = 5000 })
-                                            @Html.ValidationMessageFor(model => model.PlainTextContent)
-                                        </div>                                       
+                                        </div>                                                                        
                                     </div>                                    
                                 </div>
                                 <div class="form-group">
