--- a/170516/Views/Administrator/UpdateEmailTemplate.cshtml
+++ b/170516/Views/Administrator/UpdateEmailTemplate.cshtml
@@ -48,44 +48,15 @@
                                         }
                                     </div>
                                 </div>
-                                @Html.CheckBoxFor(model => model.IsHTML, new { hidden = "hidden" })
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">Định dạng <span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        <select class="form-control" onchange="emailTemplateSupport.ChangeHtmlToText(this)" id="ddlEmailFormat">
-                                            @if (Model.IsHTML)
-                                            {
-                                                <option selected>HTML</option>
-                                                <option>Plain Text</option>
-                                            }
-                                            else
-                                            {
-                                                <option selected>Plain Text</option>
-                                                <option>HTML</option>
-                                            }
-                                        </select>
-                                    </div>
-                                </div>
-
-
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">Sử dụng <span class="text-danger">*</span></label>
-                                    <div class="col-sm-7">
-                                        @Html.CheckBoxFor(model => model.IsEnable, new { @class = "form-control" })
-                                    </div>
-                                </div>
-
+                               
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="">Nội dung<span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        <div id="emailTemplate-area-html" @(!Model.IsHTML ? "hidden='hidden'" : "")>
+                                        <div id="emailTemplate-area-html">
                                             @Html.TextAreaFor(model => model.HtmlTextContent, new { @class = "tiny_mce_input form-control", @id = "txtA_htmlVersion", @style = "height:250px", maxlength = 5000 })
                                             @Html.ValidationMessageFor(model => model.HtmlTextContent)
                                         </div>
-                                        <div id="emailTemplate-area-text" @(Model.IsHTML ? "hidden='hidden'" : "")>
-                                            @Html.TextAreaFor(model => model.PlainTextContent, new { @id = "txtA_textVersion", @style = "min-height:250px; min-width:auto", @class = "form-control", maxlength = 5000 })
-                                            @Html.ValidationMessageFor(model => model.PlainTextContent)
-                                        </div>
+                                       
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -102,7 +73,7 @@
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
                                         <button class="btn btn-primary" type="button" id="SubmitUpdateEmailTemp"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
-                                        <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Hủy</button>
+                                        <button class="btn btn-danger" type="button" id="DeleteEmailTemplate"><i class="glyphicon glyphicon-remove"></i>Xóa</button>
                                     </div>
                                 </div>
                             </div>
@@ -116,9 +87,4 @@
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/emailTemplate.js")"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            emailTemplateSupport.ChangeHtmlToText($('#ddlEmailFormat'));
-        });
-    </script>
 }
